--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,46 +1,52 @@
-absl-py==0.11.0
+absl-py==1.2.0
 astunparse==1.6.3
-cachetools==4.2.1
-certifi==2020.12.5
-chardet==4.0.0
-cycler==0.10.0
+cachetools==5.2.0
+certifi==2022.6.15
+charset-normalizer==2.1.1
+cycler==0.11.0
 flatbuffers==1.12
+fonttools==4.37.1
 gapminder==0.1
-gast==0.3.3
-google-auth==1.24.0
-google-auth-oauthlib==0.4.2
+gast==0.4.0
+google-auth==2.11.0
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
-idna==2.10
-imageio==2.9.0
+grpcio==1.47.0
+h5py==3.7.0
+idna==3.3
+keras==2.9.0
 Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-Markdown==3.3.3
-matplotlib==3.3.4
-numpy==1.19.5
-oauthlib==3.1.0
+kiwisolver==1.4.4
+libclang==14.0.6
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.5.3
+numpy==1.23.2
+oauthlib==3.2.0
 opt-einsum==3.3.0
-pandas==1.2.1
-Pillow==8.1.0
-protobuf==3.14.0
+packaging==21.3
+pandas==1.4.3
+Pillow==9.2.0
+protobuf==3.19.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.5
-requests==2.25.1
-requests-oauthlib==1.3.0
-rsa==4.7
-scipy==1.6.0
-seaborn==0.11.1
-six==1.15.0
-tensorboard==2.4.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.1
-tensorflow-estimator==2.4.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.2.1
+requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scipy==1.9.0
+seaborn==0.11.2
+six==1.16.0
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
 termcolor==1.1.0
-typing-extensions==3.7.4.3
-urllib3==1.26.3
-Werkzeug==1.0.1
-wrapt==1.12.1
+typing_extensions==4.3.0
+urllib3==1.26.12
+Werkzeug==2.2.2
+wrapt==1.14.1
